--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blog",
   "version": "1.0.0",
   "description": "My blog",
+  "license": "MIT",
   "keywords": [
       "behavior",
       "cinema",
